--- a/public/user/css/style.css
+++ b/public/user/css/style.css
@@ -394,13 +394,14 @@
 
 /*** Single Page Hero Header Start ***/
 .bg-breadcrumb {
-    background: linear-gradient(rgba(19, 53, 123, 0.5), rgba(19, 53, 123, 0.5)), url(../img/breadcrumb-bg.jpg);
+    background: linear-gradient(rgba(19, 53, 123, 0.5), rgba(19, 53, 123, 0.5)), url('https://www.garisjabar.com/wp-content/uploads/2023/11/IMG_20231116_131252-scaled.webp');
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
     padding: 150px 0 50px 0;
 }
+
 
 .bg-breadcrumb .breadcrumb-item a {
     color: var(--bs-secondary) !important;
