--- a/public/user/css/style.css
+++ b/public/user/css/style.css
@@ -284,7 +284,7 @@
         content: "";
         width: 100%;
         height: 0;
-        bottom: -1px;
+        top: -11px;
         left: 0;
         background: var(--bs-primary);
         transition: .5s;
@@ -293,8 +293,8 @@
 
     .navbar-light .navbar-nav .nav-link:hover::before,
     .navbar-light .navbar-nav .nav-link.active::before {
-        height: calc(100% + 1px);
-        left: 1px;
+        height: calc(100% + 23px);
+        top: -11px;
     }
 
     .navbar-light .navbar-nav .nav-link.nav-contact::before {
